final changes i hope
